// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with edit prop 1`] = `
<div
  className="sc-cMljjf eIlZgS"
/>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="sc-cMljjf hqliCm"
/>
`;
